--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -4,12 +4,13 @@ on: [push, pull_request]
 
 jobs:
   php:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.operating-system }}
 
     strategy:
       max-parallel: 2
       matrix:
-        php: ['7.4', '7.3', '7.2']
+        operating-system: [ ubuntu-18.04, windows-2019]
+        php: [ '7.4', '7.3' ]
 
     steps:
       - uses: actions/checkout@v2
