--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        operating-system: [ ubuntu-18.04, windows-2019]
+        operating-system: [ windows-2019, ubuntu-18.04 ]
         php: [ '7.4', '7.3' ]
 
     steps:
