--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -8,6 +8,7 @@ jobs:
 
     strategy:
       max-parallel: 2
+      fail-fast: false
       matrix:
         operating-system: [ windows-2019, ubuntu-18.04 ]
         php: [ '7.4', '7.3' ]
