--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
     "source": "https://github.com/nelson6e65/php_nml"
   },
   "require": {
-    "php": ">=7.2"
+    "php": ">=7.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0",
-    "phpunit/phpunit": "^8 || ^9",
+    "phpunit/phpunit": "^9",
     "nelson6e65/phpdoc-vuepress": "^1.0",
     "phpstan/phpstan": "^0.12.69",
-    "rector/rector": "0.8.56",
-    "composer/composer": "^2.0"
+    "composer/composer": "^2.0",
+    "rector/rector": "^0.9.19"
   },
   "autoload": {
     "psr-4": {
