--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       max-parallel: 2
-      fail-fast: false
+      fail-fast: true
       matrix:
         operating-system: [ ubuntu-18.04, windows-2019 ]
         php: [ '7.2', '7.3', '7.4' ]
