--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0",
-    "phpunit/phpunit": "^9",
+    "phpunit/phpunit": "^8 || ^9",
     "nelson6e65/phpdoc-vuepress": "^1.0",
     "phpstan/phpstan": "^0.12.69",
     "composer/composer": "^2.0",
